# rawcrop

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  code.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  pr-ci.yml
backend/: .gitignore  code.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  temp.py
backend/tests/: README.md  test_main.py
frontend/: dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  customAnimations.css  index.css  main.jsx
frontend/src/components/ui/: card.jsx  fileUpload.jsx  filecrop.css  filecrop.jsx  slider.jsx
frontend/src/components/ui/utlis/: cropImage.js  imageUtils.js
src/components/ui/: fileUpload.jsx
