[project]
name = "rawcrop-backend"
version = "0.1.0"
description = "Backend service for RAW image processing and cropping"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.120.1",
    "uvicorn[standard]~=0.38.0",
    "python-multipart~=0.0.20",
    "rawpy~=0.25.1",
    "numpy~=2.3.4",
    "tifffile~=2025.10.16",
    "pillow~=12.0.0",
    "imageio~=2.37.0",
    "requests~=2.32.5",
    "python-dotenv~=1.2.1",
]

[tool.uv]
dev-dependencies = []
